--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "element-ui": "^2.4.4",
+    "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.1.9",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
